{
  "version": 4,
  "terraform_version": "0.15.5",
  "serial": 444,
  "lineage": "8eb36ee9-633a-bca0-c2d1-8a8f3a63b845",
  "resources": [
    {
      "mode": "data",
      "type": "aws_network_interface",
      "name": "example_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-08b1ad0d7506dca3f",
          "schema_version": 0,
          "attributes": {
            "association": [
              {
                "ip_owner_id": "370388125208",
                "public_dns_name": "ec2-52-74-126-7.ap-southeast-1.compute.amazonaws.com",
                "public_ip": "52.74.126.7"
              }
            ],
            "attachment": [
              {
                "attachment_id": "ela-attach-085a15258827effc7",
                "device_index": 1
              }
            ],
            "availability_zone": "ap-southeast-1b",
            "description": "ELB net/terraform-ansible-NLB/b79728b03d4a8592",
            "filter": [
              {
                "name": "description",
                "values": [
                  "ELB net/terraform-ansible-NLB/b79728b03d4a8592"
                ]
              },
              {
                "name": "subnet-id",
                "values": [
                  "subnet-08b1ad0d7506dca3f"
                ]
              }
            ],
            "id": "eni-03b5d49343eb79831",
            "interface_type": "network_load_balancer",
            "mac_address": "02:9a:8a:7c:29:34",
            "owner_id": "052567997892",
            "private_dns_name": "ip-100-114-12-238.ap-southeast-1.compute.internal",
            "private_ip": "100.114.12.238",
            "private_ips": [
              "100.114.12.238"
            ],
            "requester_id": "370388125208",
            "subnet_id": "subnet-08b1ad0d7506dca3f",
            "vpc_id": "vpc-028b7724ac0331752"
          }
        },
        {
          "index_key": "subnet-0e13dde65836782b9",
          "schema_version": 0,
          "attributes": {
            "association": [
              {
                "ip_owner_id": "694557549646",
                "public_dns_name": "ec2-13-213-81-24.ap-southeast-1.compute.amazonaws.com",
                "public_ip": "13.213.81.24"
              }
            ],
            "attachment": [
              {
                "attachment_id": "ela-attach-0686c688a003a3131",
                "device_index": 1
              }
            ],
            "availability_zone": "ap-southeast-1a",
            "description": "ELB net/terraform-ansible-NLB/b79728b03d4a8592",
            "filter": [
              {
                "name": "description",
                "values": [
                  "ELB net/terraform-ansible-NLB/b79728b03d4a8592"
                ]
              },
              {
                "name": "subnet-id",
                "values": [
                  "subnet-0e13dde65836782b9"
                ]
              }
            ],
            "id": "eni-068eefdbae87c3958",
            "interface_type": "network_load_balancer",
            "mac_address": "06:fc:1f:a0:c8:4a",
            "owner_id": "052567997892",
            "private_dns_name": "ip-100-114-12-208.ap-southeast-1.compute.internal",
            "private_ip": "100.114.12.208",
            "private_ips": [
              "100.114.12.208"
            ],
            "requester_id": "694557549646",
            "subnet_id": "subnet-0e13dde65836782b9",
            "vpc_id": "vpc-028b7724ac0331752"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:052567997892:loadbalancer/app/terraform-ansible-alb/c19f2aca8e583c31",
            "arn_suffix": "app/terraform-ansible-alb/c19f2aca8e583c31",
            "dns_name": "terraform-ansible-alb-1037175427.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:052567997892:loadbalancer/app/terraform-ansible-alb/c19f2aca8e583c31",
            "idle_timeout": 80,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-ansible-alb",
            "security_groups": [
              "sg-0b68ef200fe434f14"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08b1ad0d7506dca3f"
              },
              {
                "subnet_id": "subnet-0e13dde65836782b9"
              }
            ],
            "subnets": [
              "subnet-08b1ad0d7506dca3f",
              "subnet-0e13dde65836782b9"
            ],
            "tags": {
              "Creator": "jain-terraform",
              "Name": "terraform-ansible-ALB",
              "Project": "testing",
              "Requestor": "jain"
            },
            "tags_all": {
              "Creator": "jain-terraform",
              "Name": "terraform-ansible-ALB",
              "Project": "testing",
              "Requestor": "jain"
            },
            "vpc_id": "vpc-028b7724ac0331752",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:052567997892:listener/app/terraform-ansible-alb/c19f2aca8e583c31/0910bd573c65340a",
            "certificate_arn": "arn:aws:acm:ap-southeast-1:052567997892:certificate/f58defba-9e37-4c28-9235-7288cbc1c2fa",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:052567997892:targetgroup/nginx-Dev/f947a5224443a027",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:052567997892:listener/app/terraform-ansible-alb/c19f2aca8e583c31/0910bd573c65340a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:052567997892:loadbalancer/app/terraform-ansible-alb/c19f2aca8e583c31",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-Ext-2018-06",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb",
            "aws_alb_target_group.alb_target_group",
            "aws_security_group.alb",
            "data.aws_acm_certificate.ecs_domain_certificate"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "alb_listener_rabbitmq",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nginx",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:052567997892:targetgroup/nginx-Dev/f947a5224443a027",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:052567997892:listener-rule/app/terraform-ansible-alb/c19f2aca8e583c31/0910bd573c65340a/eaaf96a0b0eb42e5",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "nginx.aipo-imda.net"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:052567997892:listener-rule/app/terraform-ansible-alb/c19f2aca8e583c31/0910bd573c65340a/eaaf96a0b0eb42e5",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:052567997892:listener/app/terraform-ansible-alb/c19f2aca8e583c31/0910bd573c65340a",
            "priority": 2,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_acm_certificate.ecs_domain_certificate",
            "aws_alb.alb",
            "aws_alb_listener.alb_listener",
            "aws_alb_target_group.alb_target_group"
          ]
        },
        {
          "index_key": "rabbit",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:052567997892:targetgroup/rabbit-Dev/d33bdc6abb534b66",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:052567997892:listener-rule/app/terraform-ansible-alb/c19f2aca8e583c31/0910bd573c65340a/10c7a281b0bbfd9f",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "rabbit.aipo-imda.net"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:052567997892:listener-rule/app/terraform-ansible-alb/c19f2aca8e583c31/0910bd573c65340a/10c7a281b0bbfd9f",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:052567997892:listener/app/terraform-ansible-alb/c19f2aca8e583c31/0910bd573c65340a",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb",
            "aws_alb_listener.alb_listener",
            "aws_alb_target_group.alb_target_group",
            "aws_security_group.alb",
            "data.aws_acm_certificate.ecs_domain_certificate"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nginx",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:052567997892:targetgroup/nginx-Dev/f947a5224443a027",
            "arn_suffix": "targetgroup/nginx-Dev/f947a5224443a027",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:052567997892:targetgroup/nginx-Dev/f947a5224443a027",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nginx-Dev",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "nginx",
              "Port": "8080"
            },
            "tags_all": {
              "Name": "nginx",
              "Port": "8080"
            },
            "target_type": "instance",
            "vpc_id": "vpc-028b7724ac0331752"
          }
        },
        {
          "index_key": "rabbit",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:052567997892:targetgroup/rabbit-Dev/d33bdc6abb534b66",
            "arn_suffix": "targetgroup/rabbit-Dev/d33bdc6abb534b66",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:052567997892:targetgroup/rabbit-Dev/d33bdc6abb534b66",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "rabbit-Dev",
            "port": 15672,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "rabbit",
              "Port": "15672"
            },
            "tags_all": {
              "Name": "rabbit",
              "Port": "15672"
            },
            "target_type": "instance",
            "vpc_id": "vpc-028b7724ac0331752"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nginx",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:052567997892:targetgroup/nginx-Dev/f947a5224443a027-20210612034242177400000002",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:052567997892:targetgroup/nginx-Dev/f947a5224443a027",
            "target_id": "i-00f98c0a92f920cfd"
          },
          "dependencies": [
            "aws_alb_target_group.alb_target_group",
            "aws_instance.nginx",
            "aws_security_group.nginx"
          ]
        },
        {
          "index_key": "rabbit",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:052567997892:targetgroup/rabbit-Dev/d33bdc6abb534b66-20210612034242133800000001",
            "port": 15672,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:052567997892:targetgroup/rabbit-Dev/d33bdc6abb534b66",
            "target_id": "i-00f98c0a92f920cfd"
          },
          "dependencies": [
            "aws_alb_target_group.alb_target_group",
            "aws_instance.nginx",
            "aws_security_group.nginx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d058fe428540cd89",
            "arn": "arn:aws:ec2:ap-southeast-1:052567997892:instance/i-00f98c0a92f920cfd",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00f98c0a92f920cfd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vamakp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03181c1f4b3614e30",
            "private_dns": "ip-100-114-12-230.ap-southeast-1.compute.internal",
            "private_ip": "100.114.12.230",
            "public_dns": "ec2-54-169-165-255.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.169.165.255",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:052567997892:key/1414e094-7017-46fc-9aab-5df07f95bc0b",
                "throughput": 0,
                "volume_id": "vol-0b206378e6e7d7693",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08b1ad0d7506dca3f",
            "tags": {
              "Creator": "jain-terraform",
              "Name": "terraform-ansible",
              "Project": "testing",
              "Requestor": "jain",
              "Scheduled": "true"
            },
            "tags_all": {
              "Creator": "jain-terraform",
              "Name": "terraform-ansible",
              "Project": "testing",
              "Requestor": "jain",
              "Scheduled": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02d9bbfb009d689fe"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nlb_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:052567997892:loadbalancer/net/terraform-ansible-NLB/b79728b03d4a8592",
            "arn_suffix": "net/terraform-ansible-NLB/b79728b03d4a8592",
            "dns_name": "terraform-ansible-NLB-b79728b03d4a8592.elb.ap-southeast-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:052567997892:loadbalancer/net/terraform-ansible-NLB/b79728b03d4a8592",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "terraform-ansible-NLB",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08b1ad0d7506dca3f"
              },
              {
                "subnet_id": "subnet-0e13dde65836782b9"
              }
            ],
            "subnets": [
              "subnet-08b1ad0d7506dca3f",
              "subnet-0e13dde65836782b9"
            ],
            "tags": {
              "Environment": "Dev"
            },
            "tags_all": {
              "Environment": "Dev"
            },
            "vpc_id": "vpc-028b7724ac0331752",
            "zone_id": "ZKVM4W9LS7TM"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "5672",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:052567997892:listener/net/terraform-ansible-NLB/b79728b03d4a8592/0be43190ba1dc959",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:052567997892:targetgroup/terraform-ansible-nlbtg-5672/569abdc91c1fc289",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:052567997892:listener/net/terraform-ansible-NLB/b79728b03d4a8592/0be43190ba1dc959",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:052567997892:loadbalancer/net/terraform-ansible-NLB/b79728b03d4a8592",
            "port": 5672,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.nginx",
            "aws_lb.nlb_load_balancer",
            "aws_lb_target_group.tg",
            "aws_security_group.alb",
            "aws_security_group.nginx",
            "data.aws_network_interface.example_lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "redirect-http-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:052567997892:listener/app/terraform-ansible-alb/c19f2aca8e583c31/6e046fe018b95a7d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:052567997892:listener/app/terraform-ansible-alb/c19f2aca8e583c31/6e046fe018b95a7d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:052567997892:loadbalancer/app/terraform-ansible-alb/c19f2aca8e583c31",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb",
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "5672",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:052567997892:targetgroup/terraform-ansible-nlbtg-5672/569abdc91c1fc289",
            "arn_suffix": "targetgroup/terraform-ansible-nlbtg-5672/569abdc91c1fc289",
            "deregistration_delay": 90,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "5672",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:052567997892:targetgroup/terraform-ansible-nlbtg-5672/569abdc91c1fc289",
            "lambda_multi_value_headers_enabled": false,
            "name": "terraform-ansible-nlbtg-5672",
            "port": 5672,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Environment": "test"
            },
            "tags_all": {
              "Environment": "test"
            },
            "target_type": "instance",
            "vpc_id": "vpc-028b7724ac0331752"
          },
          "dependencies": [
            "aws_instance.nginx",
            "aws_lb.nlb_load_balancer",
            "aws_security_group.alb",
            "aws_security_group.nginx",
            "data.aws_network_interface.example_lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tga1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "5672",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:052567997892:targetgroup/terraform-ansible-nlbtg-5672/569abdc91c1fc289-20210612034242197500000003",
            "port": 5672,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:052567997892:targetgroup/terraform-ansible-nlbtg-5672/569abdc91c1fc289",
            "target_id": "i-00f98c0a92f920cfd"
          },
          "dependencies": [
            "aws_instance.nginx",
            "aws_lb_target_group.tg",
            "aws_security_group.nginx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:052567997892:security-group/sg-0b68ef200fe434f14",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b68ef200fe434f14",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-ansible-ALB-SG",
            "name_prefix": "",
            "owner_id": "052567997892",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-028b7724ac0331752"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:052567997892:security-group/sg-02d9bbfb009d689fe",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02d9bbfb009d689fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.196.250.8/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "100.114.12.238/32",
                  "100.114.12.208/32"
                ],
                "description": "",
                "from_port": 5672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5672
              },
              {
                "cidr_blocks": [
                  "116.86.133.133/32"
                ],
                "description": "",
                "from_port": 15672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 15672
              },
              {
                "cidr_blocks": [
                  "116.86.133.133/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "116.86.133.133/32"
                ],
                "description": "",
                "from_port": 5672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b68ef200fe434f14"
                ],
                "self": false,
                "to_port": 5672
              },
              {
                "cidr_blocks": [
                  "116.86.133.133/32"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 15672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b68ef200fe434f14"
                ],
                "self": false,
                "to_port": 15672
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-021bf7f871be99f3e",
                  "sg-05057e074f565c0fa",
                  "sg-0cc362e87c48e58ce"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b68ef200fe434f14"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-ansible-NGINX-SG",
            "name_prefix": "",
            "owner_id": "052567997892",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-028b7724ac0331752"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nlb_load_balancer",
            "aws_security_group.alb",
            "data.aws_network_interface.example_lb"
          ]
        }
      ]
    }
  ]
}